codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__shortcut_help_preserves_an_unused_sparkle_but_literal_question_marks_do_not.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
shortcut help:
  Keyboard shortcuts

  Compose                       Session
  /        Commands             tab  Send message
  @        Mention files        ⌥,   Less reasoning
  !        Shell command        ⌥.   More reasoning
  ⌃j       New line             ⌥m   Switch recent model
  ⌃v       Paste image          f4   Inspect activity
  ⌃g       External editor      ⌃c   Quit
  ⌃r       Search history
  esc esc  Edit last message    Transcript (open first)
                                ⌃t            Open transcript
                                f3            Find text
                                pgup / pgdn   Scroll
                                ⌃space        Start selection
                                ⌃home / ⌃end  Top / latest
                                ⇧⌥, / ⇧⌥.     Top / latest

  /keymap customize

› Ask Codex to do anything

  ? / esc close

after /model selects Astra:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Codex to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left

literal pasted question mark:

› ?

                                                             100% context left

after clearing and selecting Astra:

› Ask Codex to do anything

  ? for shortcuts                                            100% context left
